~ v3.4.1
- Now using the MIT license
- Removed licensing info in the "Info" screen
- Optimized code
- Updated to yt-dlp 2022.08.14

~ v3.4.0
- Fix major download issue for formats that use ffmpeg (temp files did not include a file extension resulting in ffmpeg erroring)
- Tiny UI improvements
- Optimized code (now using ternary operators to make some logic operations shorter, shortened variable names)
- Update "README.md"
- Removed "builds"
- Removed "versioning.txt"

~ v3.3.2
- Added warning if the user trys to launch multiple instances of MediaDownloader (having multiple instances open can cause problems)
- Optimise clnFiles function exception handler (try-catch)
- Updated to yt-dlp 2022.08.08

~ v3.3.1
- Fixed issue where when redist checks succeeded the program would set selectedLocation to " "
- Added more and updated code comments

~ v3.3.0
- Added a button to open explorer to the selected download path
- Added dev_builds folder. (while MediaDownloader is in its development stage, latest development builds will be available in that folder that you can use to test and find issues)
- Fixed the order of when the "Downloads" folder was created. If MediaDownloader fails a redist check the "Downloads" folder would still be created
- Fixed unknown temp files staying. All files inside the "mediadownloader" folder will now be deleted
- Minor visual changes
- Major code optimizations
- Changed default values for gif (web) quality settings
- Change method for versioning slightly (explained in "versioning.txt")
- Updated to ffmpeg 5.1 from gyan.dev

~ v3.2.0
- Added tooltips
- Clear component state button visual fix
- Slight changes to the README.md banner
- Updated to yt-dlp 2022.07.18

~ v3.1.0
- Banner update
- UI Update
- Change MouseMove method to MouseDown method for FormMove

~ v3.0.1
- Now using semantic versioning
- Fixed some bugged temp files staying
- Make the clear settings button more visible and obvious

~ v3.0